force-app/main/default/objects/XLSX_Error_Log__c/XLSX_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Logs errors encountered during XLSX processing.</description>
    <label>XLSX Error Log</label>
    <nameField>
        <displayFormat>XERR-{000000}</displayFormat>
        <label>Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XLSX Error Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>