force-app/main/default/objects/XLSX_Error_Log__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>The name of the file that failed.</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>