force-app/main/default/objects/XLSX_Error_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>The ID of the record this file was attached to (e.g., Case Id or ContentDocumentId).</description>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>