force-app/main/default/objects/XLSX_Error_Log__c/fields/Related_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Link__c</fullName>
    <description>Clickable link derived from Related_Record_Id__c. That field is plain Text (it's intentionally polymorphic - Case, Campaign, Lead, a custom object, whatever relatedRecordId was passed in), so it can't be a real Lookup; this formula restores click-through without needing a typed reference per possible target type.</description>
    <formula>IF(ISBLANK(Related_Record_Id__c), &quot;&quot;, HYPERLINK(&quot;/&quot; &amp; Related_Record_Id__c, Related_Record_Id__c, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Related Record Link</label>
    <type>Text</type>
</CustomField>